<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="?android:colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_in"
            android:textSize="24sp"
            android:textAlignment="center"
            tools:viewBindingIgnore="true"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:background="@drawable/input"
            android:drawableStart="@drawable/entry_user_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:paddingHorizontal="12dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_username_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/username_is_invalid"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:background="@drawable/input"
            android:paddingHorizontal="12dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:importantForAutofill="no"
            android:drawableStart="@drawable/entry_lock_icon"
            android:drawablePadding="12dp" />

        <TextView
            android:id="@+id/tv_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/password_is_invalid"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_sign_in"
            android:textSize="16sp"
            android:textAlignment="center"
            android:insetTop="0dp"
            android:insetBottom="0dp" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColorHighlight="@android:color/transparent"
            android:textColorLink="?android:colorPrimary"
            android:text="@string/offer_sign_up"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>