<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.old.MapFragment">

    <com.yandex.mapkit.mapview.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:title="@string/lorem_ipsum"
        app:titleCentered="true"
        app:navigationIcon="@drawable/ic_back"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_build_options"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/input"
            android:clickable="true"
            android:drawablePadding="12dp"
            android:ems="10"
            android:focusable="true"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:importantForAutofill="no"
            android:paddingHorizontal="20dp"
            android:textSize="18sp"
            app:drawableStartCompat="@drawable/search_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btn_edit_route"
                android:layout_gravity="top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:useCompatPadding="true"
                android:src="@drawable/ic_route"
                android:contentDescription="@string/edit_route"
                app:backgroundTint="?android:colorPrimary"
                app:tint="@color/white"
                app:layout_anchor="@+id/bottom_sheet_container"
                app:layout_anchorGravity="top|start"
                style="@style/Widget.MaterialComponents.FloatingActionButton"/>

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/bottom_sheet_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_behavior="@string/bottom_sheet_behavior"
                app:behavior_peekHeight="222dp"
                app:behavior_hideable="true" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>